-
Bug
-
Resolution: Fixed
-
Major
-
None
-
None
-
3
-
9223372036854775807
sk_utils.o ../../../libcfs/libcfs/libcfs.a -lgssapi_krb5 -lkrb5 -lk5crypto -lcom_err -lcrypto -lssl -lm -lkeyutils lfs.c: In function 'lfs_setstripe': lfs.c:1414:8: error: passing argument 2 of 'llapi_parse_size' from incompatible pointer type [-Werror] &size_units, 0); ^ In file included from lfs.c:70:0: /tmp/rpmbuild-lustre-jenkins-6sJHK5QL/BUILD/lustre-2.9.55_35_gaa32cc5/lustre/include/lustre/lustreapi.h:291:12: note: expected 'long long unsigned int *' but argument is of type '__u64 *' extern int llapi_parse_size(const char *optarg, unsigned long long *size, ^ cc1: all warnings being treated as errors make[5]: *** [lfs.o] Error 1 make[5]: *** Waiting for unfinished jobs.... make[4]: *** [all-recursive] Error 1 make[3]: *** [all-recursive] Error 1 make[2]: *** [all-recursive] Error 1
Recent landing broke PPC build
https://build.hpdd.intel.com/job/lustre-ppc/748/arch=ppc64,build_type=client,distro=el7,ib_stack=inkernel/